// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function BOOL based field extension tests Attribute level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
      {
        "term": {
          "data.attributes.extensionValues.extension.field.keyword": "",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function BOOL based field extension tests Attribute level tests Using the equals operator 1`] = `
{
  "term": {
    "data.attributes.extensionValues.extension.field.keyword": "true",
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function BOOL based field extension tests Attribute level tests Using the notEmpty operator 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "data.attributes.extensionValues.extension.field",
        },
      },
    ],
    "must_not": {
      "term": {
        "data.attributes.extensionValues.extension.field.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function BOOL based field extension tests Relationship level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must_not": {
                            "exists": {
                              "field": "included.attributes.extensionValues.extension.field",
                            },
                          },
                        },
                      },
                      {
                        "term": {
                          "included.attributes.extensionValues.extension.field.keyword": "",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function BOOL based field extension tests Relationship level tests Using the equals operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.extensionValues.extension.field.keyword": "true",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function BOOL based field extension tests Relationship level tests Using the notEmpty operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "included.attributes.extensionValues.extension.field",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
        "must_not": {
          "term": {
            "included.attributes.extensionValues.extension.field.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the containsDate operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the empty operator 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.extensionValues.extension.field",
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the equals operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19",
      "lte": "1998-05-19",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the greaterThan operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gt": "1998-05-19",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the greaterThanOrEqualTo operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gte": "1998-05-19",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the in operator 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "2020-01-01",
                "lte": "2020-01-01",
              },
            },
          },
          {
            "range": {
              "data.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "2024-04-08",
                "lte": "2024-04-08",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the lessThan operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "lt": "1998-05-19",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the lessThanOrEqualTo operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "lte": "1998-05-19",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the notEmpty operator 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "data.attributes.extensionValues.extension.field",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "range": {
              "data.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Attribute level tests Using the notIn operator 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "range": {
              "data.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "range": {
              "data.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "2020-01-01",
                "lte": "2020-01-01",
              },
            },
          },
          {
            "range": {
              "data.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "2024-04-08",
                "lte": "2024-04-08",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the containsDate operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "bool": {
                    "must_not": {
                      "exists": {
                        "field": "included.attributes.extensionValues.extension.field",
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the equals operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the greaterThan operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gt": "1998-05-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the greaterThanOrEqualTo operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gte": "1998-05-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the in operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "included.attributes.extensionValues.extension.field": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collecting-event",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "included.attributes.extensionValues.extension.field": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2020-01-01",
                                  "lte": "2020-01-01",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collecting-event",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "included.attributes.extensionValues.extension.field": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2024-04-08",
                                  "lte": "2024-04-08",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collecting-event",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the lessThan operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "lt": "1998-05-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the lessThanOrEqualTo operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "lte": "1998-05-19",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the notEmpty operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "included.attributes.extensionValues.extension.field",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
              "must_not": {
                "range": {
                  "included.attributes.extensionValues.extension.field": {
                    "format": "yyyy-MM-dd",
                    "gte": "1998-05-19",
                    "lte": "1998-05-19",
                  },
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
              "must_not": {
                "exists": {
                  "field": "included.attributes.extensionValues.extension.field",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "term": {
              "included.type": "collecting-event",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DATE based field extension tests Relationship level tests Using the notIn operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": [
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "included.attributes.extensionValues.extension.field": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "1998-05-19",
                                  "lte": "1998-05-19",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collecting-event",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "included.attributes.extensionValues.extension.field": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2020-01-01",
                                  "lte": "2020-01-01",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collecting-event",
                              },
                            },
                          ],
                        },
                      },
                      {
                        "bool": {
                          "must": [
                            {
                              "range": {
                                "included.attributes.extensionValues.extension.field": {
                                  "format": "yyyy-MM-dd",
                                  "gte": "2024-04-08",
                                  "lte": "2024-04-08",
                                },
                              },
                            },
                            {
                              "term": {
                                "included.type": "collecting-event",
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the between operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gte": 1.5,
      "lte": 10.5,
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the empty operator 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.extensionValues.extension.field",
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the equals operator 1`] = `
{
  "term": {
    "data.attributes.extensionValues.extension.field": "3.5",
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the greaterThan operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gt": "3.5",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the greaterThanOrEqualTo operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gte": "3.5",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the in operator 1`] = `
{
  "bool": {
    "must": {
      "terms": {
        "data.attributes.extensionValues.extension.field": [
          "3",
          "3.1",
          "12.5",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the lessThan operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "lt": "3.5",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the lessThanOrEqualTo operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "lte": "3.5",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the notEmpty operator 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "data.attributes.extensionValues.extension.field",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "term": {
              "data.attributes.extensionValues.extension.field": "3.5",
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Attribute level tests Using the notIn operator 1`] = `
{
  "bool": {
    "must_not": {
      "terms": {
        "data.attributes.extensionValues.extension.field": [
          "3",
          "3.1",
          "12.5",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the between operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gte": 1.5,
                "lte": 10.5,
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "bool": {
                    "must_not": {
                      "exists": {
                        "field": "included.attributes.extensionValues.extension.field",
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the equals operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.extensionValues.extension.field": "3.5",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the greaterThan operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gt": "3.5",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the greaterThanOrEqualTo operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gte": "3.5",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the in operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": {
                "terms": {
                  "included.attributes.extensionValues.extension.field": [
                    "3",
                    "3.1",
                    "12.5",
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the lessThan operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "lt": "3.5",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the lessThanOrEqualTo operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "lte": "3.5",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the notEmpty operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "included.attributes.extensionValues.extension.field",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
              "must_not": {
                "term": {
                  "included.attributes.extensionValues.extension.field": "3.5",
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
              "must_not": {
                "exists": {
                  "field": "included.attributes.extensionValues.extension.field",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "term": {
              "included.type": "collecting-event",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function DECIMAL based field extension tests Relationship level tests Using the notIn operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": {
                "terms": {
                  "included.attributes.extensionValues.extension.field": [
                    "3",
                    "3.1",
                    "12.5",
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the between operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gte": 1,
      "lte": 5,
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the empty operator 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.extensionValues.extension.field",
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the equals operator 1`] = `
{
  "term": {
    "data.attributes.extensionValues.extension.field": "42",
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the greaterThan operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gt": "42",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the greaterThanOrEqualTo operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "gte": "42",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the in operator 1`] = `
{
  "bool": {
    "must": {
      "terms": {
        "data.attributes.extensionValues.extension.field": [
          "1",
          "2",
          "4",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the lessThan operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "lt": "42",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the lessThanOrEqualTo operator 1`] = `
{
  "range": {
    "data.attributes.extensionValues.extension.field": {
      "lte": "42",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the notEmpty operator 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "data.attributes.extensionValues.extension.field",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "term": {
              "data.attributes.extensionValues.extension.field": "42",
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Attribute level tests Using the notIn operator 1`] = `
{
  "bool": {
    "must_not": {
      "terms": {
        "data.attributes.extensionValues.extension.field": [
          "1",
          "2",
          "4",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the between operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gte": 1,
                "lte": 5,
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "bool": {
                    "must_not": {
                      "exists": {
                        "field": "included.attributes.extensionValues.extension.field",
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the equals operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.extensionValues.extension.field": "42",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the greaterThan operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gt": "42",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the greaterThanOrEqualTo operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "gte": "42",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the in operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": {
                "terms": {
                  "included.attributes.extensionValues.extension.field": [
                    "1",
                    "2",
                    "4",
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the lessThan operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "lt": "42",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the lessThanOrEqualTo operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "included.attributes.extensionValues.extension.field": {
                "lte": "42",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the notEmpty operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "included.attributes.extensionValues.extension.field",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
              "must_not": {
                "term": {
                  "included.attributes.extensionValues.extension.field": "42",
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
              "must_not": {
                "exists": {
                  "field": "included.attributes.extensionValues.extension.field",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "term": {
              "included.type": "collecting-event",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function INTEGER based field extension tests Relationship level tests Using the notIn operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": {
                "terms": {
                  "included.attributes.extensionValues.extension.field": [
                    "1",
                    "2",
                    "4",
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Attribute level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
      {
        "term": {
          "data.attributes.extensionValues.extension.field.keyword": "",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Attribute level tests Using the equals operator 1`] = `
{
  "term": {
    "data.attributes.extensionValues.extension.field.keyword": "option1",
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Attribute level tests Using the in operator 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "option1",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "option2",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "option3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Attribute level tests Using the notEmpty operator 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "data.attributes.extensionValues.extension.field",
        },
      },
    ],
    "must_not": {
      "term": {
        "data.attributes.extensionValues.extension.field.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Attribute level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": "option1",
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Attribute level tests Using the notIn operator 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "option1",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "option2",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "option3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Relationship level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must_not": {
                            "exists": {
                              "field": "included.attributes.extensionValues.extension.field",
                            },
                          },
                        },
                      },
                      {
                        "term": {
                          "included.attributes.extensionValues.extension.field.keyword": "",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Relationship level tests Using the equals operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.extensionValues.extension.field.keyword": "option1",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Relationship level tests Using the in operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "option1",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "option2",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "option3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Relationship level tests Using the notEmpty operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "included.attributes.extensionValues.extension.field",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
        "must_not": {
          "term": {
            "included.attributes.extensionValues.extension.field.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Relationship level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "must_not": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "term": {
                    "included.attributes.extensionValues.extension.field.keyword": "option1",
                  },
                },
              ],
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function PICK_LIST based field extension tests Relationship level tests Using the notIn operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "option1",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "option2",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "option3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
      {
        "term": {
          "data.attributes.extensionValues.extension.field.keyword": "",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the exactMatch operator 1`] = `
{
  "term": {
    "data.attributes.extensionValues.extension.field.keyword": "stringValue",
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the in operator 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "stringValue1",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "stringValue2",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "stringValue3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the notEmpty operator 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "data.attributes.extensionValues.extension.field",
        },
      },
    ],
    "must_not": {
      "term": {
        "data.attributes.extensionValues.extension.field.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": "stringValue",
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the notIn operator 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "stringValue1",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "stringValue2",
              },
            },
          },
          {
            "term": {
              "data.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "stringValue3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the startsWith operator 1`] = `
{
  "prefix": {
    "data.attributes.extensionValues.extension.field.keyword": {
      "case_insensitive": true,
      "value": "stringValue",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Attribute level tests Using the wildcard operator 1`] = `
{
  "wildcard": {
    "data.attributes.extensionValues.extension.field.keyword": {
      "case_insensitive": true,
      "value": "*stringValue*",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the empty operator 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must_not": {
                            "exists": {
                              "field": "included.attributes.extensionValues.extension.field",
                            },
                          },
                        },
                      },
                      {
                        "term": {
                          "included.attributes.extensionValues.extension.field.keyword": "",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "collecting-event",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the exactMatch operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.extensionValues.extension.field.keyword": "stringValue",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the in operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "stringValue1",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "stringValue2",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "stringValue3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the notEmpty operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "included.attributes.extensionValues.extension.field",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
        "must_not": {
          "term": {
            "included.attributes.extensionValues.extension.field.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the notEquals operator 1`] = `
{
  "bool": {
    "must_not": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collecting-event",
                  },
                },
                {
                  "term": {
                    "included.attributes.extensionValues.extension.field.keyword": "stringValue",
                  },
                },
              ],
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the notIn operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "stringValue1",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "stringValue2",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.extensionValues.extension.field.keyword": {
                          "case_insensitive": true,
                          "value": "stringValue3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the startsWith operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "stringValue",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function STRING based field extension tests Relationship level tests Using the wildcard operator 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "wildcard": {
              "included.attributes.extensionValues.extension.field.keyword": {
                "case_insensitive": true,
                "value": "*stringValue*",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;
